more context added

--- a/Development.html
+++ b/Development.html
@@ -161,7 +161,11 @@
     <div class="panel panel-primary">
         <div class="panel-heading extender" id="extender3">Problems</div>
         <div class="panel-body" id="extended3">
-            <h3>Git</h3>
+            <h3>Past Problems</h3>
+            <hr>
+            <h3>Current Problems</h3>
+            <hr>
+            <h3>Possible Future Problems</h3>
             <hr>
         </div>
     </div>
