--- a/Plans.html
+++ b/Plans.html
@@ -19,16 +19,24 @@
     <div class="panel panel-primary">
         <div class="panel-heading extender" id="extender1">Near Future</div>
         <div class="panel-body" id="extended1">
-            <p>Our group called ATOS Finance team 18 is a team of second year computer scientist, we were
-                assigned to do a group project with atos for our module COMP204P. In this module we are given a
-                real world problem that we are supposed to solve for a company allocated... </p>
+            <p>In the near future we are looking at creating a video that would demonstrate how our app could be used,
+            to accomplish this we are going to use our app prototype in the progress</p>
         </div>
     </div>
 
     <div class="panel panel-primary">
         <div class="panel-heading extender" id="extender2">Our Part</div>
         <div class="panel-body" id="extended2">
-            <p>Hello</p>
+            <p>Our plan for the future is to start working on app development of our project. We are currently following agile development techniques and we will continue to do so throughout
+                the project. All of our tasks will be done by the deadlines we set to ourselves in the gantt chart.
+
+                <br><br>
+                Link: <a href="https://docs.google.com/spreadsheets/d/16HMCj-VCfAa3nSdjNsdTGpYpsU2YjrdiVQeiXXs2nk0/edit?usp=sharing">Gantt Chart</a>
+
+                <br><br>
+                Whilst developing the app we are going to have 3 week sprint terms after each of which we are going to show out progress to the client. So far all of our
+                progress has been documented and is available for all of our team members on google drive so for the final project report we are going to constantly add any
+                information that we may be missing.</p>
         </div>
     </div>
 
