--- a/Project.html
+++ b/Project.html
@@ -17,18 +17,44 @@
 
     <!-- main text-->
     <div class="panel panel-primary">
-        <div class="panel-heading extender" id="extender1">Quick Overview</div>
+        <div class="panel-heading extender" id="extender1">Research</div>
         <div class="panel-body" id="extended1">
-            <p>Our group called ATOS Finance team 18 is a team of second year computer scientist, we were
-                assigned to do a group project with atos for our module COMP204P. In this module we are given a
-                real world problem that we are supposed to solve for a company allocated... </p>
+            <h3>Demographic Analysis</h3>
+            <hr>
+            <p><b>Our user base is 18-34 year old people in the UK, i.e. Millenials</b>
+            <br>
+            <ul>
+                <li>Around 53% of students (18-22) have savings accounts.</li>
+                <li>The total number of HE enrolments at UK higher education institutions (HEIs) stood at <b>2,340,275</b> in 2012/13</li>
+            </ul>
+            <b>Student Loans:</b>
+            <br>
+            <ul>
+                <li><a href="http://researchbriefings.files.parliament.uk/documents/SN01079/SN01079.pdf">House of Commons Student Loan Statistics</a></li>
+                <li><a href="http://www.suttontrust.com/researcharchive/degrees-of-debt/">The Sutton Trust Degrees of Dept</a></li>
+                <li><a href="http://www.suttontrust.com/researcharchive/payback-time/">The Sutton Trust Payback Time</a></li>
+            </ul>
+            From the sources above we managed to gather that around &#8356;10 Bn is loaned to students every year,
+            At the end of 2014-15 total publicly owned debt for English students and EU students studying in England was &#8356;64.7 billion and
+            at the end of 2014-15 a total of 2.7 million borrowers, 62% of the total, were liable for repayments.
+            Perhaps the most important peace of information was that the typical English student faces debts of over &#8356;44,000 at graduation.
+            <img src="img/Demographic.PNG" class="img-rounded img-responsive" id="demographic-image" alt="demographic">
+
+            <b>Millennial Banking habits </b>
+            <br>
+
+            </p>
         </div>
     </div>
 
     <div class="panel panel-primary">
-        <div class="panel-heading extender" id="extender2">Initial Problem</div>
-        <div class="panel-body" id="extended2">
-            <p>Hello</p>
+        <div class="panel-heading extender" id="extender3">UI</div>
+        <div class="panel-body" id="extended3">
+            <h3>Design Aspects</h3>
+            <hr>
+
+            <h3>Our Design</h3>
+            <hr>
         </div>
     </div>
     <!-- end main text-->
