--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="panel-heading extender" id="extender1">About Us</div>
                 <div class="panel-body" id="extended1">
                     <h3>ATOS Finance Group 18</h3>
-                    <p>Our group called &#34ATOS Finance team 18&#34 is a team of second year computer scientist, we were assigned
+                    <p class="text-intro">Our group called &#34ATOS Finance team 18&#34 is a team of second year computer scientist, we were assigned
                         to do a group project with ATOS for our module COMP204P. In this module we are given a real world problem
                         that we are supposed to solve for a company allocated. Our allocated Company is ATOS that has challenged us.</p>
                     <hr>
