--- a/Development.html
+++ b/Development.html
@@ -17,7 +17,7 @@
 
     <!-- main text-->
     <div class="panel panel-primary">
-        <div class="panel-heading extender" id="extender1">Initial Design</div>
+        <div class="panel-heading extender" id="extender1">Gathering Requirements</div>
         <div class="panel-body" id="extended1">
             <h3>MoSCoW Analysis</h3>
             <table class="table">
@@ -159,14 +159,17 @@
     </div>
 
     <div class="panel panel-primary">
-        <div class="panel-heading extender" id="extender3">Problems</div>
+        <div class="panel-heading extender" id="extender3">Collaboration</div>
         <div class="panel-body" id="extended3">
-            <h3>Past Problems</h3>
+            <h3>Slack</h3>
             <hr>
-            <h3>Current Problems</h3>
+            <img src="img/Slack.PNG" class="img-rounded img-responsive" id="slack-image" alt="slack">
+            <h3>Google Drive</h3>
             <hr>
-            <h3>Possible Future Problems</h3>
+            <img src="img/Googledrive.PNG" class="img-rounded img-responsive" id="googledrive-image" alt="googledrive">
+            <h3>Whatsapp</h3>
             <hr>
+            <img src="img/Whatsapp.PNG" class="img-rounded img-responsive" id="whatsapp-image" alt="whatsapp">
         </div>
     </div>
     <!-- end main text-->
