--- a/Plans.html
+++ b/Plans.html
@@ -43,7 +43,7 @@
     <div class="panel panel-primary">
         <div class="panel-heading extender" id="extender3">End Result</div>
         <div class="panel-body" id="extended3">
-            <p>Hello</p>
+            <p>Of course it is impossible to predict the final version of our application before we even start our first sprint because of the very nature of agile development.</p>
         </div>
     </div>
     <!-- end main text-->
