--- a/Development.html
+++ b/Development.html
@@ -147,14 +147,31 @@
         <div class="panel-body" id="extended2">
             <h3>Git</h3>
             <hr>
+            <p>We have decided to use git as our version control system, there are many reasons o why we came to such a decistion:
+            <ul>
+                <li>Everyone in the team is familiar with it</li>
+                <li>There is a lot of information about it</li>
+                <li>Intergration with IDE&#39s</li>
+                <li>Privacy</li>
+            </ul>
+            For the actual project we have setup a private repository which no one has access to apart from our team members.
+            This was done to create this app confidentially.
+            </p>
             <h3>Xamarin</h3>
             <hr>
+            <p></p>
             <h3>Visual Studio</h3>
             <hr>
+            <p></p>
             <h3>C#</h3>
             <hr>
+            <p></p>
             <h3>SQLite</h3>
             <hr>
+            <p>From all of our conversations with the client it looks like we are not going to have access to the
+            NS&#38I&#39s backend. This would not be possible as it is essentialy a bank that stores very private information.
+            SQLite will allow us to simulate NS&#38I&#39s backend so that our application would later on be intergrated
+            into their system by their onsite engineers.</p>
         </div>
     </div>
 
