--- a/Plans.html
+++ b/Plans.html
@@ -20,7 +20,16 @@
         <div class="panel-heading extender" id="extender1">Near Future</div>
         <div class="panel-body" id="extended1">
             <p>In the near future we are looking at creating a video that would demonstrate how our app could be used,
-            to accomplish this we are going to use our app prototype in the progress</p>
+            to accomplish this we are going to use our app prototype in the progress. Here are some fo the most important
+            aspects that we are looking to accomplish in the near future:
+            <ul>
+                <li>Team devision</li>
+                <li>1st Sprint Week</li>
+                <li>Video</li>
+                <li>Documentation</li>
+                <li>Development Research</li>
+            </ul>
+            </p>
         </div>
     </div>
 
@@ -43,7 +52,8 @@
     <div class="panel panel-primary">
         <div class="panel-heading extender" id="extender3">End Result</div>
         <div class="panel-body" id="extended3">
-            <p>Of course it is impossible to predict the final version of our application before we even start our first sprint because of the very nature of agile development.</p>
+            <p>Of course it is impossible to predict the final version of our application before we even start our first sprint because of the very nature of agile development,
+            However our designs and app prototype demonstrate roughly how exactly we imagine the end product to look...</p>
         </div>
     </div>
     <!-- end main text-->
