--- a/Project.html
+++ b/Project.html
@@ -130,10 +130,11 @@
             be difficult for a regular user to read and may be impossible for a person that is colorblind. Applications that are difficult for the user to navigate
             because of irregular button placements would take them too long to understand and ultimately they may switch to using a different service.
             <br><br>
-            The application should <b>Consistency</b>
+            The application should be <b>consistent</b> in order for the application to be both simple and visible. One aspect of consistency is the layout of the app
+            a consistent layout allows a user to better assume the positions of elements of importance much better which leads to learning the app much quicker.
             <br><br>
             <b>Feedback</b> is important as it acknowledges actions made by the user. Actions that are not acknowledged would most likely lead to the user doing the same thing many times
-            (i.e. misunderstandings between the user and the application)
+            (i.e. misunderstandings between the user and the application) ultimately leading to a result that they were not expecting.
             </p>
             <h3>Our Design</h3>
             <hr>
