--- a/Development.html
+++ b/Development.html
@@ -159,13 +159,14 @@
             </p>
             <h3>Xamarin</h3>
             <hr>
-            <p></p>
+            <p>We have decided to use Xamarin for our development as it allows multiplatform development...</p>
             <h3>Visual Studio</h3>
             <hr>
-            <p></p>
-            <h3>C#</h3>
+            <p>Visual Studio is the IDE that we are planning to use for the project. Visual studio intergrates directly with Xamarin and
+            lately its development is possible both on a mac and a windows computer...</p>
+            <h3>C# is an object orientated language...</h3>
             <hr>
-            <p></p>
+            <p>C#</p>
             <h3>SQLite</h3>
             <hr>
             <p>From all of our conversations with the client it looks like we are not going to have access to the
