--- a/Development.html
+++ b/Development.html
@@ -139,6 +139,8 @@
                 </ul></li>
             </ul>
 
+            Heare are some of the scenarios that we came up with <href="https://docs.google.com/document/d/1c8E8jiPmZO_qkbftAwnQiurAwbJSpIJw_RXlclzRt0E/edit?usp=sharing">scenarios</ahref>
+
         </div>
     </div>
 
