--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h3>Sidharth Sikka</h3>
                     <hr>
                     <div class="row">
-                        <img src="img/Sidharth.PNG" class="img-rounded img-responsive col-sm-4" id="sidharth-image" alt="atos">
+                        <img src="img/Sidharth.png" class="img-rounded img-responsive col-sm-4" id="sidharth-image" alt="atos">
                         <p class="col-sm-8">
                             Hi my name is Sidharth Sikka i am a second year student at UCL currently pursuing my BSC in Computer Science.
                             My first interaction with computer science was at a very young age when my parents gifted me a programmable
@@ -89,15 +89,9 @@
                 <div class="panel-heading extender" id="extender3">Client</div>
                 <div class="panel-body" id="extended3">
                     <h3>David Swallow</h3>
+                    <hr>
+                    <p>Coming Soon...</p>
                     <div class="row">
-                        <img src="img/Sidharth.PNG" class="img-rounded img-responsive col-sm-4" id="david-image" alt="atos">
-                        <p class="col-sm-8">
-                            Hi my name is Sidharth Sikka i am a second year student at UCL currently pursuing my BSC in Computer Science.
-                            My first interaction with computer science was at a very young age when my parents gifted me a programmable
-                            robot and since then i have been hooked. I have gone on to develop my skills in C, C++, Java, web development
-                            and Python. I have done many projects within web development and am currently looking to take on projects in
-                            Java to further advance my skills.Outside of work, I enjoy playing cricket, golf and squash.
-                        </p>
                     </div>
                 </div>
             </div>
