--- a/Development.html
+++ b/Development.html
@@ -166,9 +166,9 @@
             <hr>
             <p>Visual Studio is the IDE that we are planning to use for the project. Visual studio intergrates directly with Xamarin and
             lately its development is possible both on a mac and a windows computer...</p>
-            <h3>C# is an object orientated language...</h3>
+            <h3>C#</h3>
             <hr>
-            <p>C#</p>
+            <p>C# is an object orientated language that is implimented by Xamarin for app design...</p>
             <h3>SQLite</h3>
             <hr>
             <p>From all of our conversations with the client it looks like we are not going to have access to the
@@ -179,8 +179,20 @@
     </div>
 
     <div class="panel panel-primary">
-        <div class="panel-heading extender" id="extender3">Collaboration</div>
+        <div class="panel-heading extender" id="extender3">Testing</div>
         <div class="panel-body" id="extended3">
+            <h3>Tools</h3>
+            <hr>
+            <p>Selenium</p>
+            <h3>Testing Strategy</h3>
+            <hr>
+            <p></p>
+        </div>
+    </div>
+
+    <div class="panel panel-primary">
+        <div class="panel-heading extender" id="extender4">Collaboration</div>
+        <div class="panel-body" id="extended4">
             <h3>Slack</h3>
             <hr>
             <img src="img/Slack.PNG" class="img-rounded img-responsive" id="slack-image" alt="slack">
