--- a/Project.html
+++ b/Project.html
@@ -22,7 +22,7 @@
         <div class="panel-body" id="extended1">
             <h3>NS&I Mobile App and Premium Bond Pooling</h3>
             <hr>
-            Our proposed solution is two-fold. One aspect is a new financial product: group owned premium bonds. The second aspect are IT solutions:
+            Our proposed solution is two-fold. One aspect is a new financial product: group owned premium bonds. The second aspect are the IT solutions:
             we will create an extension to NS&#38I&#39s web interface to facilitate the new financial product. Additionally, we will develop a mobile app
             that will allow users to interact with all features of their NS&I account from a smartphone or tablet.
             <h3>Rationale for Proposed Solution</h3>
