--- a/Development.html
+++ b/Development.html
@@ -186,7 +186,18 @@
             <p>Selenium</p>
             <h3>Testing Strategy</h3>
             <hr>
-            <p></p>
+            <p><b>Unit Testing</b>
+                <br><br>
+                <b>Functional Testing</b>
+                <br><br>
+                <b>Integration Testing</b>
+                <br><br>
+                <b>User Acceptance Testing</b>
+                <br><br>
+                <b>Testing C#</b>
+                <br><br>
+                <b>Black Box and White Box Testing</b>
+                <br><br></p>
         </div>
     </div>
 
