--- a/Project.html
+++ b/Project.html
@@ -24,7 +24,7 @@
             <hr>
             Our proposed solution is two-fold. One aspect is a new financial product: group owned premium bonds. The second aspect are the IT solutions:
             we will create an extension to NS&#38I&#39s web interface to facilitate the new financial product. Additionally, we will develop a mobile app
-            that will allow users to interact with all features of their NS&I account from a smartphone or tablet.
+            that will allow users to interact with all features of their NS&I account,including our new product of premium bond pooling, from a smartphone or tablet.
             <h3>Rationale for Proposed Solution</h3>
             <hr>
             Having conducted a survey of our target demographic (<a href="https://docs.google.com/forms/d/e/1FAIpQLSeF_gW6FjwgdyzOBNLAX8Fa1WLoGCgteYYQsh-V5IzLyTzkZA/viewform">Survey</a>) we learned that most of them had not heard of NS&#38I before. Moreover, many of them are students who have very little
@@ -36,6 +36,19 @@
             We believe that the mobile app is a necessity in the current market. All major retail banks have a mobile app, and we believe this is a major disadvantage. 40% of millennials
             say they interact with their smartphones more than other people. 60% of millennials interact with their bank once a week. Thus there is a strong case for a mobile app that
             would facilitate more frequent and productive interaction between millennials and NS&#38I.
+
+            <br><br>
+
+            We had also considered other solutions such as a savings simulator that would be able show people first the benefits of savings and
+            at the same time compare NS&#38Is products against others to educate people about what is in the market. Our reason for not picking
+            this solution over what we picked is due to the difficult marketing nature of this product and lack of technological aspect to
+            this solution as in addition to bringing in millennials NS&#38I also liked to digitalize their products in its entirety.
+            <br><br>
+            Another solution we had considered was also to create a new API extending NS&#38Is functionality to third party developers to allow
+            a bigger audience to develop new creative solutions that would be better suited to millennials. Our reason for not going with this
+            solution was due to its heavy reliance on NS&#38Is backend and also we were not sure on how much accessibility we would be granted
+            due to the sensitive nature of the information. Our client was also not very comfortable in accepting this solution due to the
+            impact on their backend even though he did mention that he liked the creativity in this idea.
         </div>
     </div>
 
