--- a/Project.html
+++ b/Project.html
@@ -49,6 +49,16 @@
             solution was due to its heavy reliance on NS&#38Is backend and also we were not sure on how much accessibility we would be granted
             due to the sensitive nature of the information. Our client was also not very comfortable in accepting this solution due to the
             impact on their backend even though he did mention that he liked the creativity in this idea.
+
+            <h3>Bi-Weekly Reports</h3>
+            <hr>
+            <a href="https://docs.google.com/document/d/1KaMlU6EFQtbTWE8p7mXjPonKHmujJTmJvBRzqVS3eY4/edit?usp=sharing">Bi-Weekly Report 1</a>
+            <br>
+            <a href="https://docs.google.com/document/d/1BEAAc94vfGdtwmaVHva9HUkDXEY6oQtwekEqKGP-1EA/edit?usp=sharing">Bi-Weekly Report 2</a>
+            <br>
+            <a href="https://docs.google.com/document/d/18BDK8esEOPrTz8Nr2UJUVyR8SoDciurfSqz3BU17E_c/edit?usp=sharing">Bi-Weekly Report 3</a>
+            <br>
+            <a href="https://docs.google.com/document/d/1GykEffBcvcAZhLD4qWIb6vYeQUcHzHNphR0mEqJi4Rk/edit?usp=sharing">Bi-Weekly Report 4</a>
         </div>
     </div>
 
@@ -151,7 +161,12 @@
             </p>
             <h3>Our Design</h3>
             <hr>
-            <p>This section is not yet available...</p>
+            <p>Bellow are some of the first sketches that we have made for our application</p>
+            <br>
+            <div class="row">
+                <img src="img/Sketch1.PNG" class="img-rounded img-responsive col-sm-6" id="sketch1-image" alt="sketch">
+                <img src="img/Sketch2.PNG" class="img-rounded img-responsive col-sm-6" id="sketch2-image" alt="sketch">
+            </div>
         </div>
     </div>
     <!-- end main text-->
