--- a/Prototype.html
+++ b/Prototype.html
@@ -23,20 +23,12 @@
             <h3>Introduction</h3>
             <hr>
             <p>We are currently developing the the app prototype so this section is not complete</p>
-            <h3>InVision</h3>
+            <h3>Prototype</h3>
             <hr>
+            <iframe src="https://marvelapp.com/3324ih7?emb=1" width="452" height="901" allowTransparency="true" align="center" frameborder="0"></iframe>
         </div>
     </div>
 
-    <div class="panel panel-primary">
-        <div class="panel-heading extender" id="extender2">Failed Prototypes</div>
-        <div class="panel-body" id="extended2">
-            <h3>Introduction</h3>
-            <hr>
-            <p>Over the cource of our project we have presented several solutions to the client, we do not currently have any working failed prototypes
-            however this is going to change throughout our project...</p>
-        </div>
-    </div>
     <!-- end main text-->
 
     <!--footer starts-->
