--- a/index.html
+++ b/index.html
@@ -72,31 +72,11 @@
             </div>
 
             <div class="panel panel-primary">
-                <div class="panel-heading extender" id="extender2">Business Issue</div>
-                <div class="panel-body" id="extended2">
-                    <p>Our project is to raise awareness of NS&#38I&#39s products and services to the younger generation (roughly those aged 18-30).
-                        NS&#38i being a govt organization that has been there since 1861 that invests the general public's money in the govt and
-                        gives back interest in return. They became very popular in their early years as they were backed by the government and
-                        investments were safe which was their biggest appeal. But over the years they have slipped into the dark and not many
-                        people know about them anymore and the only reason they are alive is because of their old user base. This puts into
-                        question their survivability in the future and calls into immediate action being down to market their services and
-                        attract a broader age group. The wider context is that NS&#38I hopes to digitise in its entirety and be more intuitive
-                        and easy to use as they see that's how the market is moving today.
-                        <br><br>
-                        The project is fairly open ended, with no specific type of deliverable named by the client. Solutions could range from a
-                        website to an app to a whole new product or service. We will be responsible for coming up with an innovative idea to solve
-                        this problem.</p>
-                </div>
-            </div>
-
-            <div class="panel panel-primary">
                 <div class="panel-heading extender" id="extender3">Client</div>
                 <div class="panel-body" id="extended3">
-                    <h3>David Swallow</h3>
-                    <hr>
-                    <p>Coming Soon...</p>
-                    <div class="row">
-                    </div>
+                    <p>For this assignment we have been allocated Mike Smith and David Swallow from Atos as our client. The issue that they would like us
+                    to solve involves their client NS&#38I, as a result NS&#38I can be considered as our client as well. Our clients have decided not to disclose
+                    any private information about them.</p>
                 </div>
             </div>
             <!-- end main text-->
