--- a/Plans.html
+++ b/Plans.html
@@ -53,7 +53,8 @@
         <div class="panel-heading extender" id="extender3">End Result</div>
         <div class="panel-body" id="extended3">
             <p>Of course it is impossible to predict the final version of our application before we even start our first sprint because of the very nature of agile development,
-            However our designs and app prototype demonstrate roughly how exactly we imagine the end product to look...</p>
+            However our designs and app prototype demonstrate roughly how exactly we imagine the end product to look. Our final version would have to satisfy our MoSCoW
+            Must have requirements and at least most of the should have requirements as well.</p>
         </div>
     </div>
     <!-- end main text-->
